reformatted with black

--- a/models.ipynb
+++ b/models.ipynb
@@ -15,7 +15,17 @@
     "from tensorflow import keras\n",
     "from tensorflow.keras import initializers\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, AveragePooling2D, Dropout, Flatten, Dense, Activation, BatchNormalization, LeakyReLU\n",
+    "from tensorflow.keras.layers import (\n",
+    "    Conv2D,\n",
+    "    MaxPooling2D,\n",
+    "    AveragePooling2D,\n",
+    "    Dropout,\n",
+    "    Flatten,\n",
+    "    Dense,\n",
+    "    Activation,\n",
+    "    BatchNormalization,\n",
+    "    LeakyReLU,\n",
+    ")\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -44,7 +54,7 @@
     }
    ],
    "source": [
-    "image = Image.open('./ps3_imgs/ps3_imgs/test/aakjaer-samlede-verker-1_DA-aac.jpg')\n",
+    "image = Image.open(\"./ps3_imgs/ps3_imgs/test/aakjaer-samlede-verker-1_DA-aac.jpg\")\n",
     "image"
    ]
   },
@@ -67,7 +77,7 @@
     }
    ],
    "source": [
-    "image = Image.open('./ps3_imgs/ps3_imgs/test/chinese-laws_ZN-ehv.jpg')\n",
+    "image = Image.open(\"./ps3_imgs/ps3_imgs/test/chinese-laws_ZN-ehv.jpg\")\n",
     "image"
    ]
   },
@@ -90,7 +100,7 @@
     }
    ],
    "source": [
-    "image = Image.open('./ps3_imgs/ps3_imgs/test/claudes-confession_EN-axu.jpg')\n",
+    "image = Image.open(\"./ps3_imgs/ps3_imgs/test/claudes-confession_EN-axu.jpg\")\n",
     "image"
    ]
   },
@@ -113,7 +123,7 @@
     }
    ],
    "source": [
-    "image = Image.open('./ps3_imgs/ps3_imgs/test/derzhavin-duhovnye-ody_RU-ami.jpg')\n",
+    "image = Image.open(\"./ps3_imgs/ps3_imgs/test/derzhavin-duhovnye-ody_RU-ami.jpg\")\n",
     "image"
    ]
   },
@@ -136,7 +146,7 @@
     }
    ],
    "source": [
-    "image = Image.open('./ps3_imgs/ps3_imgs/test/novel_00006_TH-abe.jpg')\n",
+    "image = Image.open(\"./ps3_imgs/ps3_imgs/test/novel_00006_TH-abe.jpg\")\n",
     "image"
    ]
   },
@@ -148,7 +158,7 @@
    "outputs": [],
    "source": [
     "def extract_lang(image_path):\n",
-    "    return re.search(r'_([A-Z]{2})[-.]', image_path).group(1)"
+    "    return re.search(r\"_([A-Z]{2})[-.]\", image_path).group(1)"
    ]
   },
   {
@@ -169,7 +179,11 @@
     }
    ],
    "source": [
-    "extract_lang(\"THIS-SHOULD-NOT-BE-RETURNED_EN-THIS-SHOULD-NOT-BE-RETURNED.jpg\"), extract_lang('aakjaer-samlede-verker-1_DA-aac.jpg'), extract_lang(\"novel_00089_TH-acw.jpg\")"
+    "extract_lang(\n",
+    "    \"THIS-SHOULD-NOT-BE-RETURNED_EN-THIS-SHOULD-NOT-BE-RETURNED.jpg\"\n",
+    "), extract_lang(\"aakjaer-samlede-verker-1_DA-aac.jpg\"), extract_lang(\n",
+    "    \"novel_00089_TH-acw.jpg\"\n",
+    ")"
    ]
   },
   {
@@ -179,8 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_folder = './ps3_imgs/ps3_imgs/train/'\n",
-    "test_folder = './ps3_imgs/ps3_imgs/test/'\n",
+    "train_folder = \"./ps3_imgs/ps3_imgs/train/\"\n",
+    "test_folder = \"./ps3_imgs/ps3_imgs/test/\"\n",
     "\n",
     "train_filenames = os.listdir(train_folder)\n",
     "test_filenames = os.listdir(test_folder)"
@@ -196,8 +210,8 @@
     "train_labels = pd.Series([extract_lang(filename) for filename in train_filenames])\n",
     "test_labels = pd.Series([extract_lang(filename) for filename in test_filenames])\n",
     "\n",
-    "train_df = pd.DataFrame({'filename': train_filenames, 'label': train_labels})\n",
-    "test_df = pd.DataFrame({'filename': test_filenames, 'label': test_labels})"
+    "train_df = pd.DataFrame({\"filename\": train_filenames, \"label\": train_labels})\n",
+    "test_df = pd.DataFrame({\"filename\": test_filenames, \"label\": test_labels})"
    ]
   },
   {
@@ -382,7 +396,7 @@
     }
    ],
    "source": [
-    "train_df['label'].value_counts(normalize=True)"
+    "train_df[\"label\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -409,7 +423,7 @@
     }
    ],
    "source": [
-    "test_df['label'].value_counts(normalize=True)"
+    "test_df[\"label\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -433,8 +447,8 @@
     "np.random.seed(5)\n",
     "\n",
     "subset_df = train_df.sample(n=5000, random_state=5).reset_index(drop=True)\n",
-    "subset_filenames = subset_df['filename']\n",
-    "subset_languages = subset_df['label']\n",
+    "subset_filenames = subset_df[\"filename\"]\n",
+    "subset_languages = subset_df[\"label\"]\n",
     "subset_df.shape"
    ]
   },
@@ -462,7 +476,7 @@
     }
    ],
    "source": [
-    "subset_df['label'].value_counts(normalize=True)"
+    "subset_df[\"label\"].value_counts(normalize=True)"
    ]
   },
   {
@@ -483,7 +497,7 @@
     }
    ],
    "source": [
-    "unique_languages = sorted(subset_df['label'].unique())\n",
+    "unique_languages = sorted(subset_df[\"label\"].unique())\n",
     "mapping = {lang: idx for idx, lang in enumerate(unique_languages)}\n",
     "mapping"
    ]
@@ -496,9 +510,14 @@
    "outputs": [],
    "source": [
     "def load_img_file(filepath):\n",
-    "    img = keras.utils.load_img(path=filepath, color_mode='grayscale', target_size=(100, 100),\n",
-    "                        interpolation='nearest', keep_aspect_ratio=False)\n",
-    "    return img\n"
+    "    img = keras.utils.load_img(\n",
+    "        path=filepath,\n",
+    "        color_mode=\"grayscale\",\n",
+    "        target_size=(100, 100),\n",
+    "        interpolation=\"nearest\",\n",
+    "        keep_aspect_ratio=False,\n",
+    "    )\n",
+    "    return img"
    ]
   },
   {
@@ -520,7 +539,7 @@
     }
    ],
    "source": [
-    "load_img_file(train_folder+subset_df['filename'].iloc[0])"
+    "load_img_file(train_folder + subset_df[\"filename\"].iloc[0])"
    ]
   },
   {
@@ -580,7 +599,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subset_X_train, subset_X_val, subset_y_train, subset_y_val = train_test_split(subset_images, subset_languages, test_size=0.2, random_state=5)"
+    "subset_X_train, subset_X_val, subset_y_train, subset_y_val = train_test_split(\n",
+    "    subset_images, subset_languages, test_size=0.2, random_state=5\n",
+    ")"
    ]
   },
   {
@@ -2443,8 +2464,15 @@
     }
    ],
    "source": [
-    "log_param_grid = {'C': [0.01, 0.1, 1, 10, 100]}\n",
-    "log_grid_search = GridSearchCV(LogisticRegression(random_state=5), log_param_grid, cv=3, scoring='accuracy', n_jobs=-1, verbose=2)\n",
+    "log_param_grid = {\"C\": [0.01, 0.1, 1, 10, 100]}\n",
+    "log_grid_search = GridSearchCV(\n",
+    "    LogisticRegression(random_state=5),\n",
+    "    log_param_grid,\n",
+    "    cv=3,\n",
+    "    scoring=\"accuracy\",\n",
+    "    n_jobs=-1,\n",
+    "    verbose=2,\n",
+    ")\n",
     "log_grid_search.fit(subset_X_train, subset_y_train)"
    ]
   },
@@ -3374,11 +3402,15 @@
     }
    ],
    "source": [
-    "rf_param_grid = {\n",
-    "    'max_depth': [10, 20, 30, None],\n",
-    "    'min_samples_leaf': [1, 2, 4]\n",
-    "}\n",
-    "rf_grid_search = GridSearchCV(RandomForestClassifier(random_state=5), rf_param_grid, cv=3, scoring='accuracy', n_jobs=-1, verbose=2)\n",
+    "rf_param_grid = {\"max_depth\": [10, 20, 30, None], \"min_samples_leaf\": [1, 2, 4]}\n",
+    "rf_grid_search = GridSearchCV(\n",
+    "    RandomForestClassifier(random_state=5),\n",
+    "    rf_param_grid,\n",
+    "    cv=3,\n",
+    "    scoring=\"accuracy\",\n",
+    "    n_jobs=-1,\n",
+    "    verbose=2,\n",
+    ")\n",
     "rf_grid_search.fit(subset_X_train, subset_y_train)"
    ]
   },
@@ -4307,11 +4339,19 @@
    ],
    "source": [
     "mlp_param_grid = {\n",
-    "    'hidden_layer_sizes': [(50,), (100,), (50, 50), (100, 50)],\n",
-    "    'alpha': [0.0001, 0.001, 0.01],\n",
-    "    'learning_rate_init': [0.001, 0.01, 0.1]\n",
+    "    \"hidden_layer_sizes\": [(50,), (100,), (50, 50), (100, 50)],\n",
+    "    \"alpha\": [0.0001, 0.001, 0.01],\n",
+    "    \"learning_rate_init\": [0.001, 0.01, 0.1],\n",
     "}\n",
-    "mlp_random_search = RandomizedSearchCV(MLPClassifier(random_state=5), mlp_param_grid, cv=3, scoring='accuracy', n_iter=10, n_jobs=-1, verbose=3)\n",
+    "mlp_random_search = RandomizedSearchCV(\n",
+    "    MLPClassifier(random_state=5),\n",
+    "    mlp_param_grid,\n",
+    "    cv=3,\n",
+    "    scoring=\"accuracy\",\n",
+    "    n_iter=10,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=3,\n",
+    ")\n",
     "mlp_random_search.fit(subset_X_train, subset_y_train)"
    ]
   },
@@ -4761,7 +4801,9 @@
     }
    ],
    "source": [
-    "nnclf = MLPClassifier(learning_rate_init=0.001, hidden_layer_sizes=(100, 50), alpha=0.0001, random_state=5)\n",
+    "nnclf = MLPClassifier(\n",
+    "    learning_rate_init=0.001, hidden_layer_sizes=(100, 50), alpha=0.0001, random_state=5\n",
+    ")\n",
     "nnclf.fit(subset_X_train, subset_y_train)"
    ]
   },
@@ -4897,18 +4939,17 @@
    ],
    "source": [
     "subset_generator = ImageDataGenerator(\n",
-    "    rescale=1./255,\n",
-    "    width_shift_range=0.25,\n",
-    "    height_shift_range=0.25\n",
+    "    rescale=1.0 / 255, width_shift_range=0.25, height_shift_range=0.25\n",
     ").flow_from_dataframe(\n",
     "    subset_df,\n",
     "    train_folder,\n",
-    "    x_col='filename', y_col='label',\n",
+    "    x_col=\"filename\",\n",
+    "    y_col=\"label\",\n",
     "    target_size=(100, 100),\n",
-    "    class_mode='categorical',\n",
-    "    color_mode='grayscale',\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"grayscale\",\n",
     "    shuffle=True,\n",
-    "    batch_size = 8\n",
+    "    batch_size=8,\n",
     ")"
    ]
   },
@@ -4927,17 +4968,16 @@
     }
    ],
    "source": [
-    "subset_generator_no_shuf = ImageDataGenerator(\n",
-    "    rescale=1./255\n",
-    ").flow_from_dataframe(\n",
+    "subset_generator_no_shuf = ImageDataGenerator(rescale=1.0 / 255).flow_from_dataframe(\n",
     "    subset_df,\n",
     "    train_folder,\n",
-    "    x_col='filename', y_col='label',\n",
+    "    x_col=\"filename\",\n",
+    "    y_col=\"label\",\n",
     "    target_size=(100, 100),\n",
-    "    class_mode='categorical',\n",
-    "    color_mode='grayscale',\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"grayscale\",\n",
     "    shuffle=False,\n",
-    "    batch_size = 8\n",
+    "    batch_size=8,\n",
     ")"
    ]
   },
@@ -4957,18 +4997,17 @@
    ],
    "source": [
     "training_generator = ImageDataGenerator(\n",
-    "    rescale=1./255,\n",
-    "    width_shift_range=0.25,\n",
-    "    height_shift_range=0.25\n",
+    "    rescale=1.0 / 255, width_shift_range=0.25, height_shift_range=0.25\n",
     ").flow_from_dataframe(\n",
     "    train_df,\n",
     "    train_folder,\n",
-    "    x_col='filename', y_col='label',\n",
+    "    x_col=\"filename\",\n",
+    "    y_col=\"label\",\n",
     "    target_size=(100, 100),\n",
-    "    class_mode='categorical',\n",
-    "    color_mode='grayscale',\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"grayscale\",\n",
     "    shuffle=True,\n",
-    "    batch_size = 8\n",
+    "    batch_size=8,\n",
     ")"
    ]
   },
@@ -4987,17 +5026,16 @@
     }
    ],
    "source": [
-    "training_generator_no_shuf = ImageDataGenerator(\n",
-    "    rescale=1./255\n",
-    ").flow_from_dataframe(\n",
+    "training_generator_no_shuf = ImageDataGenerator(rescale=1.0 / 255).flow_from_dataframe(\n",
     "    train_df,\n",
     "    train_folder,\n",
-    "    x_col='filename', y_col='label',\n",
+    "    x_col=\"filename\",\n",
+    "    y_col=\"label\",\n",
     "    target_size=(100, 100),\n",
-    "    class_mode='categorical',\n",
-    "    color_mode='grayscale',\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"grayscale\",\n",
     "    shuffle=False,\n",
-    "    batch_size = 8\n",
+    "    batch_size=8,\n",
     ")"
    ]
   },
@@ -5016,17 +5054,16 @@
     }
    ],
    "source": [
-    "test_generator = ImageDataGenerator(\n",
-    "    rescale=1./255\n",
-    ").flow_from_dataframe(\n",
+    "test_generator = ImageDataGenerator(rescale=1.0 / 255).flow_from_dataframe(\n",
     "    test_df,\n",
     "    test_folder,\n",
-    "    x_col='filename', y_col='label',\n",
+    "    x_col=\"filename\",\n",
+    "    y_col=\"label\",\n",
     "    target_size=(100, 100),\n",
-    "    class_mode='categorical',\n",
-    "    color_mode='grayscale',\n",
+    "    class_mode=\"categorical\",\n",
+    "    color_mode=\"grayscale\",\n",
     "    shuffle=False,\n",
-    "    batch_size = 8\n",
+    "    batch_size=8,\n",
     ")"
    ]
   },
@@ -5199,32 +5236,31 @@
    "source": [
     "model = Sequential()\n",
     "model.add(keras.Input(shape=(100, 100, 1)))\n",
-    "model.add(Conv2D(32, (5, 5), activation='relu'))\n",
+    "model.add(Conv2D(32, (5, 5), activation=\"relu\"))\n",
     "model.add(LeakyReLU(alpha=0.1))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D((2, 2)))\n",
     "model.add(Dropout(0.3))\n",
     "\n",
-    "model.add(Conv2D(64, (5, 5), activation='relu'))\n",
+    "model.add(Conv2D(64, (5, 5), activation=\"relu\"))\n",
     "model.add(LeakyReLU(alpha=0.1))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D((2, 2)))\n",
     "model.add(Dropout(0.3))\n",
     "\n",
-    "model.add(Conv2D(128, (5, 5), activation='relu'))\n",
+    "model.add(Conv2D(128, (5, 5), activation=\"relu\"))\n",
     "model.add(LeakyReLU(alpha=0.1))\n",
     "model.add(BatchNormalization())\n",
     "model.add(MaxPooling2D((2, 2)))\n",
     "model.add(Dropout(0.3))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(128, activation='relu'))\n",
+    "model.add(Dense(128, activation=\"relu\"))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(5, activation='softmax'))\n",
+    "model.add(Dense(5, activation=\"softmax\"))\n",
     "\n",
-    "model.compile(loss='categorical_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
-    "model.summary()\n"
+    "model.compile(loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])\n",
+    "model.summary()"
    ]
   },
   {
